--- a/components/side-nav/SideNav.module.scss
+++ b/components/side-nav/SideNav.module.scss
@@ -8,14 +8,73 @@
   align-items: center;
   justify-content: center;
   font-size: 30px;
-  // font-weight: bold;
   margin: 20px 0 50px 0;
 }
 
 @media screen and (max-width: 479px) {
   .container {
     width: 100%;
-    // height: 100vh;
     padding: 0;
   }
+}
+
+.navLink {
+  width: 230px;
+  height: 60px;
+  padding: 0 28px;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  margin: 20px 0 0 0;
+  background-color: rgb(176, 180, 185);
+  position: relative;
+
+  &.active {
+    background-color: hsl(0, 0%, 0%);
+    color: hsl(0, 0%, 100%);
+  }
+
+  &:focus,
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.icon {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0 16px 0 0;
+
+  > svg {
+    color: hsl(0, 0%, 0%);
+  }
+
+  &.active {
+    > svg {
+      fill: hsl(0, 0%, 100%);
+    }
+  }
+}
+
+.primaryText {
+  font-size: 22px;
+  font-weight: bold;
+}
+
+.secondaryLinkSection {
+  width: 230px;
+  // height: 75px;
+  padding: 25px 28px 15px 28px;
+  border-radius: 0 0 15px 15px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin: -15px 0 0 0;
+  background-color: rgb(176, 180, 185);
+}
+
+.secondaryLink {
+  font-size: 18px;
+  margin: 10px 0;
 }
